# rust-hello-world

./: .gitignore  CLAUDE-CODE-SESSION-PLAN.md  Cargo.toml  README.md  SECURITY.md  deny.toml
.github/workflows/: ci.yml
benches/parser_bench/: Cargo.toml
benches/parser_bench/benches/: parser_bench.rs
crates/concurrency_demo/: Cargo.toml
crates/concurrency_demo/src/: main.rs
crates/error_demo/: Cargo.toml
crates/ffi_demo/: Cargo.toml
crates/ffi_demo/examples/: README.md  call_from_node.js  call_from_node_koffi.js  call_from_python.py
crates/ffi_demo/src/: lib.rs
crates/hello_cli/: Cargo.toml
crates/hello_cli/src/: main.rs
crates/hello_lib/: Cargo.toml
crates/hello_lib/src/: lib.rs
crates/log_parser/: Cargo.toml
crates/log_parser/src/: lib.rs
crates/power_blocks/: Cargo.toml
crates/power_blocks/src/: lib.rs  parallel_map.rs  retry.rs  typed_id.rs  typestate_builder.rs  zero_copy.rs
crates/wasm_demo/: Cargo.toml  LICENSE
crates/wasm_demo/examples/: index.html
crates/wasm_demo/src/: lib.rs
docs/: 00-getting-started.md  01-hello-cli.md  02-error-handling.md  03-concurrency.md  04-performance.md  05-security-tooling.md  06-ffi-and-wasm.md  07-reusable-power-blocks.md  08-session-wrap-up-2026-02-17.md  09-release-process.md  README.md
scripts/: size.sh
